--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -14,11 +14,10 @@
     - [5.2.1. QEMU](#521-qemu)
     - [5.2.2. 整体流程](#522-整体流程)
     - [5.2.3. 入口代码](#523-入口代码)
-    - [5.2.4. kvm_create_pit(): 创建pit(8254)](#524-kvm_create_pit-创建pit8254)
-      - [5.2.4.1. 初始化PIT的worker和work](#5241-初始化pit的worker和work)
-      - [5.2.4.2. 初始化PIT的定时器hrtimer](#5242-初始化pit的定时器hrtimer)
-      - [5.2.4.3. kvm_pit_reset(): 重置pit](#5243-kvm_pit_reset-重置pit)
-      - [5.2.4.4. 注册pit设备和pio接口](#5244-注册pit设备和pio接口)
+    - [5.2.4. 初始化PIT的worker和work](#524-初始化pit的worker和work)
+    - [5.2.5. 初始化PIT的定时器hrtimer](#525-初始化pit的定时器hrtimer)
+    - [5.2.6. kvm_pit_reset(): 重置pit](#526-kvm_pit_reset-重置pit)
+    - [5.2.7. 注册pit设备和pio接口](#527-注册pit设备和pio接口)
   - [5.3. pit的time tick和timer](#53-pit的time-tick和timer)
   - [5.4. 创建定时器](#54-创建定时器)
     - [5.4.1. 整体流程](#541-整体流程)
@@ -239,9 +238,7 @@ create_pit_unlock:
         break;
 ```
 
-创建pit并赋值给 `kvm->arch.vpit`
-
-### 5.2.4. kvm_create_pit(): 创建pit(8254)
+调用`kvm_create_pit()`创建pit并赋值给 `kvm->arch.vpit`
 
 ```cpp
 struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
@@ -262,7 +259,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
                 goto fail_request;
 
         mutex_init(&pit->pit_state.lock);
-
+        // 获取pid
         pid = get_pid(task_tgid(current));
         pid_nr = pid_vnr(pid);
         put_pid(pid);
@@ -337,7 +334,7 @@ fail_request:
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-#### 5.2.4.1. 初始化PIT的worker和work
+### 5.2.4. 初始化PIT的worker和work
 
 ```cpp
 pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
@@ -353,7 +350,7 @@ worker主要函数有3个:
 - `kthread_queue_work(pool->worker, &pool->work);`: 将这个work添加到worker的工作队列, 让worker开始工作
 - `kthread_flush_work()`: 用来在最后要停止worker的处理线程之前,保证所有的work都已经处理了
 
-#### 5.2.4.2. 初始化PIT的定时器hrtimer
+### 5.2.5. 初始化PIT的定时器hrtimer
 
 初始化一个高精准定时器，这个定时器就作为我们**虚拟时钟的时钟源**, 然而定时器的物理时钟源根据不同的硬件而不同
 
@@ -371,7 +368,7 @@ pit_state->timer.function = pit_timer_fn;
 
 由此可见, 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
-#### 5.2.4.3. kvm_pit_reset(): 重置pit
+### 5.2.6. kvm_pit_reset(): 重置pit
 
 ```cpp
 static void kvm_pit_reset(struct kvm_pit *pit)
@@ -465,7 +462,7 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
-#### 5.2.4.4. 注册pit设备和pio接口
+### 5.2.7. 注册pit设备和pio接口
 
 ```cpp
 #define KVM_PIT_BASE_ADDRESS 0x40
@@ -539,6 +536,7 @@ handle_io()  // io vmexit入口
  ├─ dev->ops->write();     // pit设备的write调用
  |   ├─ pit_ioport_write();  // 写pit io入口
  |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
+ |   |   ├─ pit_in_range(addr); // 判断操作的io地址是否在0x40~0x43
  |   |   ├─ pit_load_count(); // 分配irq source id
  |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
  |   |   └─ create_pit_timer(); // 创建pit timer定时器
@@ -573,12 +571,12 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         int channel, access;
         struct kvm_kpit_channel_state *s;
         u32 val = *(u32 *) data;
-        // 判断addr范围, gpa
+        // 判断addr范围, io地址空间
         if (!pit_in_range(addr))
                 return -EOPNOTSUPP;
 
         val  &= 0xff;
-        // &0x3, 通道号
+        // 0x40 ~ 0x43, 看是哪个地址, 与11运算
         addr &= KVM_PIT_CHANNEL_MASK;
 
         mutex_lock(&pit_state->lock);
@@ -586,7 +584,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         if (val != 0)
                 pr_debug("write addr is 0x%x, len is %d, val is 0x%x\n",
                          (unsigned int)addr, len, val);
-        // 通道3
+        // 0x43地址
         if (addr == 3) {
                 channel = val >> 6;
                 if (channel == 3) {
@@ -617,7 +615,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                         }
                 }
         } else {
-                // addr不为3
+                // 不为0x43 io
                 /* Write Count. */
                 s = &pit_state->channels[addr];
                 switch (s->write_state) {
@@ -655,7 +653,7 @@ static inline int pit_in_range(gpa_t addr){
 }
 ```
 
-前面pit初始化时候注册的操作地址是
+前面pit初始化时候注册的操作地址是`0x40 ~ 0x43`, 属于io地址空间, 独立于内存地址空间, 所以gpa, 不需要地址转换
 
 
 关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
