--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -538,14 +538,14 @@ handle_io()  // io vmexit入口
  |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
  |   |   ├─ pit_in_range(addr); // 判断操作的io地址是否在0x40~0x43
  |   |   ├─ pit_load_count(); // 分配irq source id
- |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
- |   |   └─ create_pit_timer(); // 创建pit timer定时器
- |   |       ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
- |   |       ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
- |   |       ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
- |   |       ├─ ps->period = interval; // 设置pit的超时时间
- |   |       ├─ ps->is_periodic = is_period; // 是否周期触发
- |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
+ |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
+ |   |   |   └─ create_pit_timer(); // 创建pit timer定时器
+ |   |   |       ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
+ |   |   |       ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
+ |   |   |       ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
+ |   |   |       ├─ ps->period = interval; // 设置pit的超时时间
+ |   |   |       ├─ ps->is_periodic = is_period; // 是否周期触发
+ |   |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
 ```
 
 这个是启用了定时器, 后面还有**定时器中断处理流程**以及**时钟中断注入流程**.
