--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -415,7 +415,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
                 ps->channels[channel].count_load_time = ktime_get();
                 return;
         }
-        // 往下都是通道0
+        // 往下都是通道0, 系统时钟
         /* Two types of timer
          * mode 1 is one shot, mode 2 is period, otherwise del timer */
         // 通道0的mode, 这里是0xff
