--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -17,6 +17,7 @@
     - [5.2.4. 初始化PIT的worker和work](#524-初始化pit的worker和work)
     - [5.2.5. 初始化PIT的定时器hrtimer](#525-初始化pit的定时器hrtimer)
     - [5.2.6. kvm_pit_reset(): 重置pit](#526-kvm_pit_reset-重置pit)
+      - [pit_load_count(): 装载计数值](#pit_load_count-装载计数值)
     - [5.2.7. 注册pit设备和pio接口](#527-注册pit设备和pio接口)
   - [5.3. pit的time tick和timer](#53-pit的time-tick和timer)
   - [5.4. 创建定时器](#54-创建定时器)
@@ -394,6 +395,8 @@ static void kvm_pit_reset(struct kvm_pit *pit)
 
 调用`pit_load_count()`, 注意这里面没有启用定时器, 反而清理了这个定时器
 
+#### pit_load_count(): 装载计数值
+
 ```cpp
 static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 {
@@ -586,7 +589,9 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                          (unsigned int)addr, len, val);
         // 0x43地址
         if (addr == 3) {
+                // 通道
                 channel = val >> 6;
+                // 通道3
                 if (channel == 3) {
                         /* Read-Back Command. */
                         for (channel = 0; channel < 3; channel++) {
@@ -598,6 +603,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                                                 pit_latch_status(pit, channel);
                                 }
                         }
+                // 不是通道3
                 } else {
                         /* Select Counter <channel>. */
                         s = &pit_state->channels[channel];
@@ -615,7 +621,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                         }
                 }
         } else {
-                // 不为0x43 io
+                // 不为0x43 io地址
                 /* Write Count. */
                 s = &pit_state->channels[addr];
                 switch (s->write_state) {
@@ -655,6 +661,7 @@ static inline int pit_in_range(gpa_t addr){
 
 前面pit初始化时候注册的操作地址是`0x40 ~ 0x43`, 属于io地址空间, 独立于内存地址空间, 所以gpa, 不需要地址转换
 
+`pit_latch_count`用于锁存当前的计数值：
 
 关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
 
