--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -17,7 +17,7 @@
     - [5.2.4. 初始化PIT的worker和work](#524-初始化pit的worker和work)
     - [5.2.5. 初始化PIT的定时器hrtimer](#525-初始化pit的定时器hrtimer)
     - [5.2.6. kvm_pit_reset(): 重置pit](#526-kvm_pit_reset-重置pit)
-      - [pit_load_count(): 装载计数值](#pit_load_count-装载计数值)
+      - [5.2.6.1. pit_load_count(): 装载计数值](#5261-pit_load_count-装载计数值)
     - [5.2.7. 注册pit设备和pio接口](#527-注册pit设备和pio接口)
   - [5.3. pit的time tick和timer](#53-pit的time-tick和timer)
   - [5.4. 创建定时器](#54-创建定时器)
@@ -395,7 +395,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
 
 调用`pit_load_count()`, 注意这里面没有启用定时器, 反而清理了这个定时器
 
-#### pit_load_count(): 装载计数值
+#### 5.2.6.1. pit_load_count(): 装载计数值
 
 ```cpp
 static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
@@ -468,6 +468,12 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 ### 5.2.7. 注册pit设备和pio接口
 
 ```cpp
+
+static const struct kvm_io_device_ops pit_dev_ops = {
+        .read     = pit_ioport_read,
+        .write    = pit_ioport_write,
+};
+
 #define KVM_PIT_BASE_ADDRESS 0x40
 #define KVM_PIT_MEM_LENGTH 4
 #define KVM_SPEAKER_BASE_ADDRESS 0x61
@@ -487,6 +493,8 @@ ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
                                 KVM_SPEAKER_BASE_ADDRESS, 4,
                                 &pit->speaker_dev);
 ```
+
+`0x40~0x43`的写函数设置为`pit_ioport_write`；`0x40~0x43`的读函数设置为`pit_ioport_read`：
 
 查看虚拟机的ioports
 
@@ -522,13 +530,6 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 那什么时候创建定时器? 
 
 当guest os通过**寄存器操作**启动时, 即**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器, 从而启动一个hrtimer来模拟**时钟中断源**.
-
-```cpp
-static const struct kvm_io_device_ops pit_dev_ops = {
-        .read     = pit_ioport_read,
-        .write    = pit_ioport_write,
-};
-```
 
 在前面创建pit中初始化了pit设备的读写函数.
 
@@ -662,6 +663,18 @@ static inline int pit_in_range(gpa_t addr){
 前面pit初始化时候注册的操作地址是`0x40 ~ 0x43`, 属于io地址空间, 独立于内存地址空间, 所以gpa, 不需要地址转换
 
 `pit_latch_count`用于锁存当前的计数值：
+
+```cpp
+static void pit_latch_count(struct kvm_pit *pit, int channel)
+{
+        struct kvm_kpit_channel_state *c = &pit->pit_state.channels[channel];
+
+        if (!c->count_latched) {
+                c->latched_count = pit_get_count(pit, channel);
+                c->count_latched = c->rw_mode;
+        }
+}
+```
 
 关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
 
