--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -378,7 +378,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
         struct kvm_kpit_channel_state *c;
 
         pit->pit_state.flags = 0;
-        // 3个通道
+        // 3个通道, 0 1 2
         for (i = 0; i < 3; i++) {
                 c = &pit->pit_state.channels[i];
                 // disable timer, 不会启用timer
@@ -442,6 +442,8 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
         }
 }
 ```
+
+`pit_load_count`用于装载计数值，`ps->channels[channel].count_load_time`是装载时tick的值(每ns增加一次); `ps->channels[channel].count`是8254的周期, 
 
 调用`destroy_pit_timer()`使PIT的timer(定时器)无效
 
@@ -649,7 +651,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
 }
 ```
 
-先判断地址的范围
+1. 先判断地址的范围
 
 ```cpp
 #define KVM_PIT_BASE_ADDRESS 0x40
@@ -662,7 +664,7 @@ static inline int pit_in_range(gpa_t addr){
 
 前面pit初始化时候注册的操作地址是`0x40 ~ 0x43`, 属于io地址空间, 独立于内存地址空间, 所以gpa, 不需要地址转换
 
-`pit_latch_count`用于锁存当前的计数值：
+2. `pit_latch_count`用于锁存当前的计数值：
 
 ```cpp
 static void pit_latch_count(struct kvm_pit *pit, int channel)
@@ -676,7 +678,7 @@ static void pit_latch_count(struct kvm_pit *pit, int channel)
 }
 ```
 
-关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
+3. `pit_load_count`用于装载计数值, 查看上面的函数详细说明, 会调用`create_pit_timer`
 
 ### 5.4.3. create_pit_timer(): 创建定时器
 
