--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -443,7 +443,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 }
 ```
 
-`pit_load_count`用于装载计数值，`ps->channels[channel].count_load_time`是装载时tick的值(每ns增加一次); `ps->channels[channel].count`是8254的周期, 
+`pit_load_count`用于装载计数值，`ps->channels[channel].count_load_time`是装载时tick的值(每ns增加一次); `ps->channels[channel].count`是8254的周期, 8254自己的计数值会按照1193kHZ的频率递减的。
 
 调用`destroy_pit_timer()`使PIT的timer(定时器)无效
 
