--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -18,6 +18,7 @@
     - [5.2.5. 初始化PIT的定时器hrtimer](#525-初始化pit的定时器hrtimer)
     - [5.2.6. kvm_pit_reset(): 重置pit](#526-kvm_pit_reset-重置pit)
       - [5.2.6.1. pit_load_count(): 装载计数值](#5261-pit_load_count-装载计数值)
+      - [5.2.6.2. kvm_pit_reset_reinject(): 重置重注入信息](#5262-kvm_pit_reset_reinject-重置重注入信息)
     - [5.2.7. 注册pit设备和pio接口](#527-注册pit设备和pio接口)
   - [5.3. pit的time tick和timer](#53-pit的time-tick和timer)
   - [5.4. 创建定时器](#54-创建定时器)
@@ -206,7 +207,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   |       ├─ hrtimer_cancel(&pit->pit_state.timer); // 取消pit的定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
  |   |   |   |       └─ kthread_flush_work(&pit->expired); // 停止worker前, 保证pit的超时work已完成, 因为pit的work没有执行, 所以不涉及
  |   |   |   ├─ } // 循环3次
- |   |   |   └─ kvm_pit_reset_reinject(pit); // 
+ |   |   |   └─ kvm_pit_reset_reinject(pit); // 重置重注入信息
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
  |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册pit的IO读写函数
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册pit的io到bus总线上, PIO类型
@@ -393,7 +394,8 @@ static void kvm_pit_reset(struct kvm_pit *pit)
 }
 ```
 
-调用`pit_load_count()`, 注意这里面没有启用定时器, 反而清理了这个定时器
+1. 调用`pit_load_count()`, 注意这里面没有启用定时器, 反而清理了这个定时器
+2. `kvm_pit_reset_reinject()` 重置注入信息
 
 #### 5.2.6.1. pit_load_count(): 装载计数值
 
@@ -411,7 +413,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
         // 0 的话
         if (val == 0)
                 val = 0x10000;
-        // 通道计数为 0x10000
+        // 通道计数为 0x10000, 65536
         ps->channels[channel].count = val;
         // 非 0 通道, 返回
         if (channel != 0) {
@@ -422,6 +424,9 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
         // 往下都是通道0, 系统时钟
         /* Two types of timer
          * mode 1 is one shot, mode 2 is period, otherwise del timer */
+        // mode 1: one shot 模式
+        // mode 2 : 周期性模式
+        // 其他则删除定时器
         // 通道0的mode, 这里是0xff
         // 注意, 这里没有调用创建定时器
         switch (ps->channels[0].mode) {
@@ -444,7 +449,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 }
 ```
 
-`pit_load_count`用于装载计数值，`ps->channels[channel].count_load_time`是装载时tick的值(每ns增加一次); `ps->channels[channel].count`是8254的周期, 8254自己的计数值会按照1193kHZ的频率递减的。
+`pit_load_count`用于装载计数值，`ps->channels[channel].count_load_time`是装载时tick的值(每ns增加一次); `ps->channels[channel].count`是8254的周期, 8254自己的计数值会按照1193kHZ的频率递减的。注意和`count_load_time`单位的不同，以及后续单位的转换。
 
 调用`destroy_pit_timer()`使PIT的timer(定时器)无效
 
@@ -467,6 +472,16 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 - 第二种情况，定时器还在红黑树中，那么把它**从红黑树中移出**。由于本文暂时只考虑高精度没有打开的情况，所以先不研究定时器正好排在红黑树第一个时的情况（即代码中调用hrtimer_force_reprogram函数的部分）。
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
+
+#### 5.2.6.2. kvm_pit_reset_reinject(): 重置重注入信息
+
+```cpp
+static inline void kvm_pit_reset_reinject(struct kvm_pit *pit)
+{
+        atomic_set(&pit->pit_state.pending, 0);
+        atomic_set(&pit->pit_state.irq_ack, 1);
+}
+```
 
 ### 5.2.7. 注册pit设备和pio接口
 
@@ -544,7 +559,7 @@ handle_io()  // io vmexit入口
  |   ├─ pit_ioport_write();  // 写pit io入口
  |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
  |   |   ├─ pit_in_range(addr); // 判断操作的io地址是否在0x40~0x43
- |   |   ├─ pit_load_count(); // 分配irq source id
+ |   |   ├─ pit_load_count(); // 
  |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
  |   |   |   └─ create_pit_timer(); // 创建pit timer定时器
  |   |   |       ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
@@ -710,7 +725,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
         ps->period = interval;
         // 是否周期触发
         ps->is_periodic = is_period;
-
+        // 重置注入信息
         kvm_pit_reset_reinject(pit);
 
         /*
