--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -18,8 +18,9 @@
     - [5.2.5. 初始化PIT的定时器hrtimer](#525-初始化pit的定时器hrtimer)
     - [5.2.6. kvm_pit_reset(): 重置pit](#526-kvm_pit_reset-重置pit)
       - [5.2.6.1. pit_load_count(): 装载计数值](#5261-pit_load_count-装载计数值)
-      - [5.2.6.2. kvm_pit_reset_reinject(): 重置重注入信息](#5262-kvm_pit_reset_reinject-重置重注入信息)
-    - [5.2.7. 注册pit设备和pio接口](#527-注册pit设备和pio接口)
+      - [5.2.6.2. kvm_pit_reset_reinject(): 重置pit重注入信息](#5262-kvm_pit_reset_reinject-重置pit重注入信息)
+    - [5.2.7. kvm_pit_set_reinject(): 设置pit重注入信息](#527-kvm_pit_set_reinject-设置pit重注入信息)
+    - [5.2.8. 注册pit设备和pio接口](#528-注册pit设备和pio接口)
   - [5.3. pit的time tick和timer](#53-pit的time-tick和timer)
   - [5.4. 创建定时器](#54-创建定时器)
     - [5.4.1. 整体流程](#541-整体流程)
@@ -208,7 +209,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   |       └─ kthread_flush_work(&pit->expired); // 停止worker前, 保证pit的超时work已完成, 因为pit的work没有执行, 所以不涉及
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 重置重注入信息
- |   |   ├─ kvm_pit_set_reinject(pit, true); // 
+ |   |   ├─ kvm_pit_set_reinject(pit, true); // 设置重注入信息
  |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册pit的IO读写函数
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册pit的io到bus总线上, PIO类型
  |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // speaker 设备的io操作注册
@@ -473,7 +474,7 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
-#### 5.2.6.2. kvm_pit_reset_reinject(): 重置重注入信息
+#### 5.2.6.2. kvm_pit_reset_reinject(): 重置pit重注入信息
 
 ```cpp
 static inline void kvm_pit_reset_reinject(struct kvm_pit *pit)
@@ -483,7 +484,44 @@ static inline void kvm_pit_reset_reinject(struct kvm_pit *pit)
 }
 ```
 
-### 5.2.7. 注册pit设备和pio接口
+### 5.2.7. kvm_pit_set_reinject(): 设置pit重注入信息
+
+```cpp
+void kvm_pit_set_reinject(struct kvm_pit *pit, bool reinject)
+{
+        struct kvm_kpit_state *ps = &pit->pit_state;
+        struct kvm *kvm = pit->kvm;
+
+        if (atomic_read(&ps->reinject) == reinject)
+                return;
+
+        /*
+         * AMD SVM AVIC accelerates EOI write and does not trap.
+         * This cause in-kernel PIT re-inject mode to fail
+         * since it checks ps->irq_ack before kvm_set_irq()
+         * and relies on the ack notifier to timely queue
+         * the pt->worker work iterm and reinject the missed tick.
+         * So, deactivate APICv when PIT is in reinject mode.
+         */
+        if (reinject) {
+                kvm_request_apicv_update(kvm, false,
+                                         APICV_INHIBIT_REASON_PIT_REINJ);
+                /* The initial state is preserved while ps->reinject == 0. */
+                kvm_pit_reset_reinject(pit);
+                kvm_register_irq_ack_notifier(kvm, &ps->irq_ack_notifier);
+                kvm_register_irq_mask_notifier(kvm, 0, &pit->mask_notifier);
+        } else {
+                kvm_request_apicv_update(kvm, true,
+                                         APICV_INHIBIT_REASON_PIT_REINJ);
+                kvm_unregister_irq_ack_notifier(kvm, &ps->irq_ack_notifier);
+                kvm_unregister_irq_mask_notifier(kvm, 0, &pit->mask_notifier);
+        }
+
+        atomic_set(&ps->reinject, reinject);
+}
+```
+
+### 5.2.8. 注册pit设备和pio接口
 
 ```cpp
 
