--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -1010,13 +1010,6 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 当前流程中, 只有**周期性/一次性**模式才调用, tscdeadline模式不调用
 
 ```cpp
-#define APIC_BUS_CYCLE_NS 1
-static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
-{
-        // 根据clock时钟频率将tmict(初始计数)转换成ns单位
-        return (u64)tmict * APIC_BUS_CYCLE_NS * (u64)apic->divide_count;
-}
-
 // 这个函数本身是都会调用, 不限于周期性/一次性
 // 根据传入的count_reg计数寄存器(apic的一个寄存器)设置到期时间
 static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
@@ -1027,13 +1020,13 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         s64 deadline;
         // 当前ktime
         now = ktime_get();
-        // 设置触发周期时间, 临时设置
+        // 设置触发周期时间
         // 即, IMICT初始计数寄存器值(转换成ns单位)
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
-        // 如果初始计数寄存器值为0
+        // 如果初始计数寄存器值为0, 则是停止one shot/period
         if (!apic->lapic_timer.period) {
-                // 设置tscdeadline为0, 返回false
+                // 设置tscdeadline为0, 返回false, 因为
                 apic->lapic_timer.tscdeadline = 0;
                 return false;
         }
@@ -1080,6 +1073,22 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         return true;
 }
 ```
+
+1. 将IMICT初始计数寄存器值(转换成ns单位)作为lapic timer的周期, `apic->lapic_timer.period`
+
+`tmict_to_ns()` 用于将**初始计数值**转换成ns单位, 初始计数值类似于IMICT寄存器的值.
+
+```cpp
+#define APIC_BUS_CYCLE_NS 1
+static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
+{
+        // 根据clock时钟频率将tmict(初始计数)转换成ns单位
+        return (u64)tmict * APIC_BUS_CYCLE_NS * (u64)apic->divide_count;
+}
+```
+
+2. 
+
 ### 6.3.4. restart_apic_timer(): 重启apic timer定时器
 
 ```cpp
