--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -940,7 +940,7 @@ start_apic_timer()  // 启动apic timer定时器
  |   ├─ set_target_expiration(apic, count_reg); // 设置到期时间, 当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
  |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
- |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 设置然后返回
+ |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 意味着停止一次性/周期性timer, 则设置tscdeadline为0然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
  |   |   ├─ deadline = apic->lapic_timer.period; // 等于IMICT
  |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, tsc+deadline
@@ -1020,7 +1020,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         s64 deadline;
         // 当前ktime
         now = ktime_get();
-        // 设置触发周期时间
+        // 获取IMICT寄存器值, 设置触发周期时间
         // 即, IMICT初始计数寄存器值(转换成ns单位)
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
@@ -1074,7 +1074,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
 }
 ```
 
-1. 将IMICT初始计数寄存器值(转换成ns单位)作为lapic timer的周期, `apic->lapic_timer.period`
+1. 将IMICT初始计数寄存器值(转换成ns单位)作为lapic timer的触发周期, `apic->lapic_timer.period`
 
 `tmict_to_ns()` 用于将**初始计数值**转换成ns单位, 初始计数值类似于IMICT寄存器的值.
 
