--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -336,6 +336,7 @@ struct kvm_timer {
         ktime_t target_expiration;
         // 定时器模式, apic timer 有3种
         u32 timer_mode;
+        // timer 模式屏蔽位
         u32 timer_mode_mask;
         // tscdeadline寄存器
         u64 tscdeadline;
