--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -1182,11 +1182,16 @@ static void cancel_hv_timer(struct kvm_lapic *apic)
 }
 ```
 
+http://chinaunix.net/uid-25739055-id-4092821.html
 
 
 # 7. kvmclock时钟虚拟化
 
-时间虚拟化的一种实现方式是通过时钟中断计数，进而换算得到，这种方式在虚拟机里存在问题，因为有时运行vpcu的cpu被调度出来使 时钟中断不能准时到达guest os。另外一种方式，如模拟HPET，guest os当需要的时候会去读当前的时间，这种方式会使得虚拟机频繁的VM-exit，影响性能。为此kvm引入了基于半虚拟化的时钟kvmclock,这种方式需要在guest上实现一个kvmclock驱动， 建立guest os 到VMM的通道， 这样通过这个通道guest os 向vmm 查询时间。
+时间虚拟化的一种实现方式是通过**时钟中断计数**，进而**换算得到**，这种方式在虚拟机里存在问题，因为有时运行**vpcu的cpu被调度出来**使时钟中断**不能准时到达guest os**。
+
+另外一种方式，如模拟HPET，guest os当需要的时候会去读当前的时间，这种方式会使得虚拟机频繁的VM-exit，影响性能。
+
+为此kvm引入了基于半虚拟化的时钟kvmclock,这种方式需要在guest上实现一个kvmclock驱动， 建立guest os 到VMM的通道， 这样通过这个通道guest os 向vmm 查询时间。
 
 
 
