--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -38,6 +38,8 @@
     - [6.3.3. set_target_expiration(): 设置目标过期时间](#633-set_target_expiration-设置目标过期时间)
     - [6.3.4. restart_apic_timer(): 重启apic timer定时器](#634-restart_apic_timer-重启apic-timer定时器)
 - [7. kvmclock时钟虚拟化](#7-kvmclock时钟虚拟化)
+  - [相关结构体](#相关结构体)
+    - [](#)
 
 <!-- /code_chunk_output -->
 
@@ -1193,6 +1195,30 @@ http://chinaunix.net/uid-25739055-id-4092821.html
 
 为此kvm引入了基于**半虚拟化**的时钟kvmclock,这种方式需要在**guest**上实现一个**kvmclock驱动**， 建立guest os 到VMM的通道， 这样通过这个通道guest os 向vmm 查询时间。
 
+## 相关结构体
+
+### 
+
+```cpp
+struct pvclock_vcpu_time_info {
+        u32   version;
+        u32   pad0;
+        //guest的TSC时间戳，在kvm_guest_time_update中会被更新
+        u64   tsc_timestamp;
+        //guest的墙上时间（1970年距今的绝对日期），和上者在一起更新
+        u64   system_time;
+        u32   tsc_to_system_mul;
+        s8    tsc_shift;
+        u8    flags;
+        u8    pad[2];
+} __attribute__((__packed__)); /* 32 bytes */
+
+struct pvclock_wall_clock {
+        u32   version;
+        u32   sec;
+        u32   nsec;
+} __attribute__((__packed__));
+```
 
 
 https://blog.csdn.net/wanthelping/article/details/47069085
