--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -3,26 +3,26 @@
 
 <!-- code_chunk_output -->
 
-- [6. APIC timer中断](#6-apic-timer中断)
-  - [6.1. 相关结构体](#61-相关结构体)
-  - [6.2. 创建和初始化虚拟定时器设备](#62-创建和初始化虚拟定时器设备)
-  - [6.3. 启动定时器](#63-启动定时器)
-    - [6.3.1. 整体流程](#631-整体流程)
-    - [6.3.2. 入口代码](#632-入口代码)
-    - [6.3.3. set_target_expiration(): 设置目标过期时间](#633-set_target_expiration-设置目标过期时间)
-    - [6.3.4. restart_apic_timer(): 重启apic timer定时器](#634-restart_apic_timer-重启apic-timer定时器)
+- [1. APIC timer中断](#1-apic-timer中断)
+- [2. 相关结构体](#2-相关结构体)
+- [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
+- [4. 启动定时器](#4-启动定时器)
+  - [4.1. 整体流程](#41-整体流程)
+  - [4.2. 入口代码](#42-入口代码)
+  - [4.3. set_target_expiration(): 设置目标过期时间](#43-set_target_expiration-设置目标过期时间)
+  - [4.4. restart_apic_timer(): 重启apic timer定时器](#44-restart_apic_timer-重启apic-timer定时器)
 
 <!-- /code_chunk_output -->
 
-# 6. APIC timer中断
+# 1. APIC timer中断
 
 前面提到, APIC Timer的APIC定时器有3种定时器模式
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
-## 6.1. 相关结构体
+# 2. 相关结构体
 
-## 6.2. 创建和初始化虚拟定时器设备
+# 3. 创建和初始化虚拟定时器设备
 
 由于APIC Timer设备实际就是**lapic**的一个**功能**，所以在创建lapic设备同时，也就辅助设置了。
 
@@ -43,11 +43,11 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 首先创建一个**定时器**，然后初始化**APIC Timer设备**产生**中断的函数**，实际就是定时器回调函数。
 
-## 6.3. 启动定时器
+# 4. 启动定时器
 
 启用上面的定时器, 产生调用回调函数
 
-### 6.3.1. 整体流程
+## 4.1. 整体流程
 
 ```cpp
 start_apic_timer()  // 启动apic timer定时器
@@ -89,7 +89,7 @@ handle_io()  // io vmexit入口
  |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
 ```
 
-### 6.3.2. 入口代码
+## 4.2. 入口代码
 
 ```cpp
 // Timer initial counter register, timer初始计数寄存器
@@ -120,7 +120,7 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 
 对于tscdeadline模式, 直接调用`restart_apic_timer()`, 启用apic timer定时器
 
-### 6.3.3. set_target_expiration(): 设置目标过期时间
+## 4.3. set_target_expiration(): 设置目标过期时间
 
 当前流程中, 只有**周期性/一次性**模式才调用, tscdeadline模式不调用
 
@@ -204,7 +204,7 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 
 2. 
 
-### 6.3.4. restart_apic_timer(): 重启apic timer定时器
+## 4.4. restart_apic_timer(): 重启apic timer定时器
 
 ```cpp
 static void restart_apic_timer(struct kvm_lapic *apic)
@@ -298,10 +298,4 @@ static void cancel_hv_timer(struct kvm_lapic *apic)
 ```
 
 http://chinaunix.net/uid-25739055-id-4092821.html
-
-
-
-
-
-https://blog.csdn.net/wanthelping/article/details/47069085
 
