--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/4. kvmclock时钟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/4. kvmclock时钟.md
@@ -101,14 +101,14 @@ static struct clocksource kvm_clock = {
 
 kvmclock_init负责在[guest启动过程](http://oenhan.com/kvm-src-2-vm-run)中初始化kvm clock（kvmclock 驱动），首先更新了两个MSR值：
 
-```
+```cpp
 #define MSR_KVM_WALL_CLOCK_NEW  0x4b564d00
 #define MSR_KVM_SYSTEM_TIME_NEW 0x4b564d01
 ```
 
 然后为每个CPU分配struct pvclock_vsyscall_time_info内存，获取了首要CPU的pvti对应的物理地址，将其写入到msr_kvm_system_time MSR中
 
-```
+```cpp
 void __init kvmclock_init(void)
 {
 	···
@@ -148,7 +148,7 @@ void __init kvmclock_init(void)
 
 #### 2.2.1.1. 函数 kvm_register_clock
 
-```
+```cpp
 int kvm_register_clock(char *txt)
 {
 	int cpu = smp_processor_id();
@@ -176,7 +176,7 @@ int kvm_register_clock(char *txt)
 
 #### 2.2.1.2. 函数 kvm_sched_clock_init
 
-```
+```cpp
 static inline void kvm_sched_clock_init(bool stable)
 {
 	if (!stable) {
@@ -198,7 +198,7 @@ static inline void kvm_sched_clock_init(bool stable)
 
 #### 2.2.1.3. 函数 clocksource_register_hz：时钟资源注册
 
-```
+```cpp
 static inline int clocksource_register_hz(struct clocksource *cs, u32 hz)
 {
 	return __clocksource_register_scale(cs, 1, hz);
@@ -226,7 +226,7 @@ int __clocksource_register_scale(struct clocksource *cs, u32 scale, u32 freq)
 
 #### 2.2.1.4. a. 函数 kvm_get_tsc_khz
 
-```
+```cpp
 //获取pv clock信息转换成hz
 static unsigned long kvm_get_tsc_khz(void)
 {
@@ -244,7 +244,7 @@ static unsigned long kvm_get_tsc_khz(void)
 
 #### 2.2.1.5. b. 函数 kvm_get_wallclock
 
-```
+```cpp
 static void kvm_get_wallclock(struct timespec *now)
 {
 	struct pvclock_vcpu_time_info *vcpu_time;
@@ -271,7 +271,7 @@ static void kvm_get_wallclock(struct timespec *now)
 
 #### 2.2.1.6. 函数pvclock_read_wallclock的访问
 
-```
+```cpp
 void pvclock_read_wallclock(struct pvclock_wall_clock *wall_clock,
 			    struct pvclock_vcpu_time_info *vcpu_time,
 			    struct timespec *ts)
@@ -306,7 +306,7 @@ void pvclock_read_wallclock(struct pvclock_wall_clock *wall_clock,
 
 
 
-```
+```cpp
 u64 pvclock_clocksource_read(struct pvclock_vcpu_time_info *src)
 {
 	unsigned version;
@@ -368,14 +368,14 @@ arch\x86\kvm\x86.c
 
 kvm_set_msr_common ==>  case MSR_KVM_WALL_CLOCK ==> kvm_write_wall_clock
 
-```
+```cpp
 case MSR_KVM_WALL_CLOCK:
 	//wall_clock是guest中对应的wall_clock地址
 	vcpu->kvm->arch.wall_clock = data;
 	kvm_write_wall_clock(vcpu->kvm, data);
 ```
 
-```
+```cpp
 static void kvm_write_wall_clock(struct kvm *kvm, gpa_twall_clock)
 {
     .......
@@ -407,7 +407,7 @@ static void kvm_write_wall_clock(struct kvm *kvm, gpa_twall_clock)
 
 在kvm_arch_init_vm中有
 
-```
+```cpp
 arch\x86\kvm\x86.c
 
 kvm->arch.kvmclock_offset = -ktime_get_boot_ns();
@@ -417,7 +417,7 @@ kvm->arch.kvmclock_offset = -ktime_get_boot_ns();
 
 kvm_read_guest/kvm_write_guest 的工作原理是通过gpa得到对应page 的hva和页内偏移，然后就能读写内存了
 
-```
+```cpp
 int kvm_read_guest(struct kvm *kvm, gpa_t gpa, void *data, unsigned long len)
 {
 	gfn_t gfn = gpa >> PAGE_SHIFT;
@@ -463,7 +463,7 @@ static int __kvm_read_guest_page(struct kvm_memory_slot *slot, gfn_t gfn,
 
 #### 2.2.2.2. （2） MSR_KVM_SYSTEM_TIME
 
-```
+```cpp
 case MSR_KVM_SYSTEM_TIME: {
     ···
 	vcpu->arch.time = data;
@@ -491,7 +491,7 @@ vcpu_enter_guest==> KVM_REQ_GLOBAL_CLOCK_UPDATE
 
 kvm_gen_kvmclock_update(vcpu);
 
-```
+```cpp
 static void kvm_gen_kvmclock_update(struct kvm_vcpu *v)
 {
 	struct kvm *kvm = v->kvm;
@@ -511,7 +511,7 @@ INIT_DELAYED_WORK(&kvm->arch.kvmclock_sync_work, kvmclock_sync_fn);
 
 所以kvm->arch.kvmclock_update_work==》
 
-```
+```cpp
 static void kvmclock_update_fn(struct work_struct *work)
 {
     ···
@@ -533,7 +533,7 @@ kvm_guest_time_update会将时间更新到vcpu->pv_time
 
 ## 2.3. kvm_guest_time_update分析
 
-```
+```cpp
 static int kvm_guest_time_update(struct kvm_vcpu *v)
 {
 	unsigned long flags, tgt_tsc_khz;
@@ -652,7 +652,7 @@ arch/x86/include/asm/pvclock.h文件中的__pvclock_read_cycles函数中：
 
 在kvm_write_tsc中，本次tsc写和上次的tsc写比较，得到elapsed和usdiff
 
-```
+```cpp
 ns = ktime_get_boot_ns();
 
 elapsed = ns - kvm->arch.last_tsc_nsec;
@@ -664,7 +664,7 @@ usdiff = data - kvm->arch.last_tsc_write;
 
 因为last_tsc_write和last_tsc_nsec都是在KVM下而非vcpu下，就是证明所有tsc是稳定的意义
 
-```
+```cpp
 if (!matched) {
 
 kvm->arch.nr_vcpus_matched_tsc = 0;
@@ -683,7 +683,7 @@ kvm_get_wallclock替代mach_get_cmos_time获取rtc时间，mach_get_cmos_time函
 通过0x70，0x71端口操作。
 参考LINUX内核：mach_get_cmos_time()，启动的时候获取日期时间。虽然内核也可以在每次需要的得到当前时间的时候读取 RTC，但这是一个 IO 调用，性能低下。实际上，在得到了当前时间后，Linux 系统会立即启动 tick 中断。此后，在每次的时钟中断处理函数内，Linux 更新当前的时间值，并保存在全局变量 xtime 内。比如时钟中断的周期为 10ms，那么每次中断产生，就将 xtime 加上 10ms。
 
-```
+```cpp
 unsigned char rtc_cmos_read(unsigned char addr)
 
 {
@@ -707,7 +707,7 @@ return val;
 
 关键在于时钟源的读取不再依赖于xtime的中断：
 
-```
+```cpp
 static struct clocksource kvm_clock = {
 
 .name = "kvm-clock",
@@ -751,7 +751,7 @@ return ret;
 
 而tsc的时钟源是
 
-```
+```cpp
 static struct clocksource clocksource_tsc = {
 
 .name                   = "tsc",
