--- Auto-Git Commit ---

--- a/Linux/Algorithm/DataStructure/Linked List/哈希链表.md
+++ b/Linux/Algorithm/DataStructure/Linked List/哈希链表.md
@@ -102,7 +102,9 @@ node2->next->pprev = node2->pprev;
 hlist_add_head(struct hlist_node *n, struct hlist_head *h)
 ```
 
-其中n表示待插入的节点，h表示哈希链表表头。在刚初始化完哈希表myhlist的情况下，依次调用四次hlist\_add\_head()，每次调用后myhlist哈希表的情况如下：
+其中n表示待插入的节点，h表示哈希链表表头。
+
+在刚初始化完哈希表myhlist的情况下，依次调用四次hlist\_add\_head()，每次调用后myhlist哈希表的情况如下：
 
 ![config](images/24.png)
 
