--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -22,10 +22,11 @@
 
 # 1. 简介
 
-使用APIC Timer的最大好处是每个cpu内核都有一个定时器（避免了定时器资源的抢占问题，你要是抢走了一个cpu核心，你就肯定抢走了一个定时器），这里的cpu内核是指和核心数，把超线程技术的那个内核也算进去了。相反的我们之前使用的PIT(Programmable Interval Timer)就不这样，PIT是共用的一个。因为这样，我们不需要考虑任何资源管理问题，我们能够很轻松的使用它（老外说话有时候很..）。但是APIC有一个比较麻烦的是，他的精度和CPU的频率有关（这里的频率指的是CPU的外频，现在主流的就是200MHz，但是有点飘，这个我在最后解释）。而PIT使用的是一个标准的频率（1193182Hz）。如果要使用APICTimer，那么你必须自己知道每秒钟能触发多少个中断。
+使用APIC Timer的最大好处是每个cpu内核都有一个定时器（避免了定时器资源的抢占问题，你要是抢走了一个cpu核心，你就肯定抢走了一个定时器），这里的cpu内核是指和核心数，把超线程技术的那个内核也算进去了。相反的我们之前使用的PIT(Programmable Interval Timer)就不这样，PIT是共用的一个。因为这样，我们不需要考虑任何资源管理问题，我们能够很轻松的使用它。
+
+但是APIC有一个比较麻烦的是，他的精度和CPU的频率有关（这里的频率指的是CPU的外频，现在主流的就是200MHz，但是有点飘，这个我在最后解释）。而PIT使用的是一个标准的频率（1193182Hz）。如果要使用APICTimer，那么你必须自己知道每秒钟能触发多少个中断。
 
 # 2. APIC timer组成
-
 
 local APIC的**timer**是非常简单易用的。它由以下**4个部分组成**。
 
@@ -43,9 +44,9 @@ Divide configuration寄存器用来**配置timer计数的时钟频率**，和tim
 
 **Timer的计数频率**使用**system bus频率除以上图所列出来的值**，当配置使用除1时，将使用与**TSC（time\-stamp counter**）及**IA32\_FIXED\_CTR2计数器相同的计数频率**。这个寄存器的初始值为0，即使用system bus频率除以2的计数频率。
 
-initial\-count与current\-count寄存器是32位寄存器，在**开始计数时**，**软件**需要在**Initial\-count（初始计数）寄存器**提供一个**非0值**的初始计数值。一旦设置初始计数值，local APIC会将**初始计数值**复制到**只读**的**current\-count（当前计数）寄存器**里。
+initial\-count与current\-count寄存器是32位寄存器，在**开始计数时**，**软件**需要在**Initial\-count（初始计数）寄存器**提供一个**非0值**的初始计数值。
 
-current\-count寄存器的值开始**减1，直至为0值**。current\-count减为0时产生**timer中断**。
+一旦设置初始计数值，local APIC会将**初始计数值**复制到**只读**的**current\-count（当前计数）寄存器**里。current\-count寄存器的值开始**减1，直至为0值**。current\-count减为0时产生**timer中断**。
 
 APIC timer支持**三种计数模式**，在LVT timer寄存器里设置。
 
