--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -238,7 +238,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         WARN_ON(preemptible());
         if (!kvm_can_use_hv_timer(vcpu))
                 return false;
-        // tscdeadline是0
+        // tscdeadline是0, 直接返回false
         if (!ktimer->tscdeadline)
                 return false;
 
@@ -253,6 +253,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
          * even if the deadline timer has expired, i.e. rely on the resulting
          * VM-Exit to recompute the periodic timer's target expiration.
          */
+        // 非周期性
         if (!apic_lvtt_period(apic)) {
                 /*
                  * Cancel the hv timer if the sw timer fired while the hv timer
