--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -62,6 +62,9 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
  |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
+ |   |   ├─ start_hv_timer(); // 分配irq source id
+ |   |       ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
+ |   |   ├─ start_sw_timer(); // 分配irq source id
 
 
 
