--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -62,9 +62,9 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
  |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
- |   |   ├─ start_hv_timer(); // 分配irq source id
- |   |       ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
- |   |   ├─ start_sw_timer(); // 分配irq source id
+ |   |   ├─ start_hv_timer(); // 
+ |   |       ├─ kvm_can_use_hv_timer(vcpu); // 
+ |   |   ├─ start_sw_timer(); // 
 
 
 
@@ -239,6 +239,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         bool expired;
 
         WARN_ON(preemptible());
+        // 判断能不能使用hv_timer
         if (!kvm_can_use_hv_timer(vcpu))
                 return false;
         // tscdeadline是0, 直接返回false
@@ -274,6 +275,15 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         trace_kvm_hv_timer_state(vcpu->vcpu_id, ktimer->hv_timer_in_use);
 
         return true;
+}
+```
+
+```cpp
+bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
+{
+        return kvm_x86_ops.set_hv_timer
+               && !(kvm_mwait_in_guest(vcpu->kvm) ||
+                    kvm_can_post_timer_interrupt(vcpu));
 }
 ```
 
