--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -62,9 +62,9 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
  |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
- |   |   ├─ start_hv_timer(); // 
- |   |       ├─ kvm_can_use_hv_timer(vcpu); // 
- |   |   ├─ start_sw_timer(); // 
+ |   |   ├─ start_hv_timer(); // 能使用hv timer, 则使用hv timer
+ |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回, 
+ |   |   ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
 
 
 
@@ -282,10 +282,13 @@ static bool start_hv_timer(struct kvm_lapic *apic)
 bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 {
         return kvm_x86_ops.set_hv_timer
+               // mwait透传, kvm能够post timer interrupt
                && !(kvm_mwait_in_guest(vcpu->kvm) ||
                     kvm_can_post_timer_interrupt(vcpu));
 }
 ```
+
+mwait指令透传给虚拟机, 或者能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer
 
 ```cpp
 static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
