--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -63,7 +63,12 @@ start_apic_timer()  // 启动apic timer定时器
  |   └─ restart_apic_timer();  // 重启定时器
  |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
  |   |   ├─ start_hv_timer(); // 能使用hv timer, 则使用hv timer
- |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回, 
+ |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |       ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
+ |   |       ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置hv timer, 失败则直接返回false
+ |   |       ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
+ |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
  |   |   ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
 
 
@@ -248,7 +253,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         // 对应vmx的vmx_set_hv_timer
         if (kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired))
                 return false;
-
+        // 设定hv timer正在使用
         ktimer->hv_timer_in_use = true;
         // 取消lapic timer定时器
         hrtimer_cancel(&ktimer->timer);
@@ -265,6 +270,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                  * was being programmed, or if the hv timer itself expired.
                  */
                 if (atomic_read(&ktimer->pending)) {
+                        // 取消hv timer
                         cancel_hv_timer(apic);
                 } else if (expired) {
                         apic_timer_expired(apic, false);
@@ -278,6 +284,8 @@ static bool start_hv_timer(struct kvm_lapic *apic)
 }
 ```
 
+1. 判断能否使用hv timer, 
+
 ```cpp
 bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 {
@@ -289,6 +297,9 @@ bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 ```
 
 mwait指令透传给虚拟机, 或者能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer
+
+2. 
+
 
 ```cpp
 static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
