--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -272,7 +272,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                 if (atomic_read(&ktimer->pending)) {
                         // 取消hv timer
                         cancel_hv_timer(apic);
-                } else if (expired) {
+                } else if (expired) 
                         apic_timer_expired(apic, false);
                         cancel_hv_timer(apic);
                 }
@@ -284,7 +284,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
 }
 ```
 
-1. 判断能否使用hv timer, 
+1. 判断能否使用hv timer, 不能使用即退出
 
 ```cpp
 bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
