--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -307,9 +307,11 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
 {
         struct vcpu_vmx *vmx;
         u64 tscl, guest_tscl, delta_tsc, lapic_timer_advance_cycles;
+        // 获取lapic timer
         struct kvm_timer *ktimer = &vcpu->arch.apic->lapic_timer;
 
         vmx = to_vmx(vcpu);
+        // 读取tsc
         tscl = rdtsc();
         guest_tscl = kvm_read_l1_tsc(vcpu, tscl);
         delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;
