--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -187,7 +187,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                         }
                 }
         }
-        // tscdeadline值 = tsc + deadline
+        // tscdeadline值 = 虚拟机tsc + deadline
         apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) +
                 nsec_to_cycles(apic->vcpu, deadline);
         // 到期时间 = now + deadline
@@ -311,8 +311,9 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
         struct kvm_timer *ktimer = &vcpu->arch.apic->lapic_timer;
 
         vmx = to_vmx(vcpu);
-        // 读取tsc
+        // 读取host tsc
         tscl = rdtsc();
+        // 读取guest tsc
         guest_tscl = kvm_read_l1_tsc(vcpu, tscl);
         delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;
         lapic_timer_advance_cycles = nsec_to_cycles(vcpu,
