--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -165,7 +165,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                         // deadline是count_reg寄存器值(只不过转换成ns单位)
                         deadline = tmict_to_ns(apic,
                                      kvm_lapic_get_reg(apic, count_reg));
-                        // count_reg寄存器值小于0的话, 还是IMICT
+                        // count_reg寄存器值小于0的话, 还是使用IMICT寄存器值
                         if (unlikely(deadline <= 0))
                                 // deadline 还是 IMICT
                                 deadline = apic->lapic_timer.period;
