--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -210,7 +210,9 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 }
 ```
 
-2. 
+2. 计算deadline, 
+3. 设置`apic->lapic_timer.tscdeadline`为 `虚拟机tsc + deadline`
+4. 设置`apic->lapic_timer.target_expiration`为 `ktime_get() + deadline`
 
 ## 4.4. restart_apic_timer(): 重启apic timer定时器
 
