--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -210,7 +210,7 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 }
 ```
 
-2. 计算deadline, 
+2. 计算deadline, 默认IMICT寄存器的值; 
 3. 设置`apic->lapic_timer.tscdeadline`为 `虚拟机tsc + deadline`
 4. 设置`apic->lapic_timer.target_expiration`为 `ktime_get() + deadline`
 
@@ -232,9 +232,9 @@ out:
 }
 ```
 
-如果**不是周期性模式**时(即**一次性/tscdeadline模式**), 而apic timer有pending事件, 则不重启, 直接退出.
+如果**不是周期性模式**时(即**一次性/tscdeadline模式**), 而apic timer有pending事件, 则不重启timer, 直接退出.
 
-
+先试图
 
 ```cpp
 
