--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -11,7 +11,7 @@
   - [4.2. 入口代码](#42-入口代码)
   - [4.3. set_target_expiration(): 设置目标过期时间](#43-set_target_expiration-设置目标过期时间)
   - [4.4. restart_apic_timer(): 重启apic timer定时器](#44-restart_apic_timer-重启apic-timer定时器)
-    - [start_hv_timer(): 使用hv timer](#start_hv_timer-使用hv-timer)
+    - [4.4.1. start_hv_timer(): 使用hv timer](#441-start_hv_timer-使用hv-timer)
 
 <!-- /code_chunk_output -->
 
@@ -222,7 +222,7 @@ static void restart_apic_timer(struct kvm_lapic *apic)
 {
         preempt_disable();
         // 不是周期性模式 并且
-        // apic定时器有pending事件, 直接退出
+        // apic timer有pending事件, 直接退出
         if (!apic_lvtt_period(apic) && atomic_read(&apic->lapic_timer.pending))
                 goto out;
 
@@ -233,11 +233,11 @@ out:
 }
 ```
 
-如果**不是周期性模式**时(即**一次性/tscdeadline模式**), 而apic timer有pending事件, 则不重启timer, 直接退出.
+如果**不是周期性模式**时(即**一次性/tscdeadline模式**), 而apic timer**有pending事件**, 则不启动timer, 直接退出.
 
 先试图启用hv timer, 如果启动失败, 则使用sw timer.
 
-### start_hv_timer(): 使用hv timer
+### 4.4.1. start_hv_timer(): 使用hv timer
 
 ```cpp
 
