--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -274,6 +274,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                  * Cancel the hv timer if the sw timer fired while the hv timer
                  * was being programmed, or if the hv timer itself expired.
                  */
+                // timer pending事件存在
                 if (atomic_read(&ktimer->pending)) {
                         // 取消hv timer
                         cancel_hv_timer(apic);
