--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -12,6 +12,7 @@
   - [4.3. set_target_expiration(): 设置目标过期时间](#43-set_target_expiration-设置目标过期时间)
   - [4.4. restart_apic_timer(): 重启apic timer定时器](#44-restart_apic_timer-重启apic-timer定时器)
     - [4.4.1. start_hv_timer(): 使用hv timer](#441-start_hv_timer-使用hv-timer)
+    - [start_sw_timer(): 使用sw timer](#start_sw_timer-使用sw-timer)
 
 <!-- /code_chunk_output -->
 
@@ -71,6 +72,9 @@ start_apic_timer()  // 启动apic timer定时器
  |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
  |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
  |   |   ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
+ |   |       ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
+ |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
 
 
 
@@ -352,12 +356,15 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
 }
 ```
 
-```
+### start_sw_timer(): 使用sw timer
+
+```cpp
 static void start_sw_timer(struct kvm_lapic *apic)
 {
         struct kvm_timer *ktimer = &apic->lapic_timer;
 
         WARN_ON(preemptible());
+        // hv timer在使用, 则取消
         if (apic->lapic_timer.hv_timer_in_use)
                 cancel_hv_timer(apic);
         // 不是周期性并且存在pending, 直接返回
@@ -365,21 +372,15 @@ static void start_sw_timer(struct kvm_lapic *apic)
                 return;
         // 周期性或一次性模式
         if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic))
+                // 
                 start_sw_period(apic);
         // tscdeadline模式
         else if (apic_lvtt_tscdeadline(apic))
                 start_sw_tscdeadline(apic);
         trace_kvm_hv_timer_state(apic->vcpu->vcpu_id, false);
 }
-
-static void cancel_hv_timer(struct kvm_lapic *apic)
-{
-        WARN_ON(preemptible());
-        WARN_ON(!apic->lapic_timer.hv_timer_in_use);
-        kvm_x86_ops.cancel_hv_timer(apic->vcpu);
-        apic->lapic_timer.hv_timer_in_use = false;
-}
 ```
+
 
 
 
