--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -65,16 +65,18 @@ start_apic_timer()  // 启动apic timer定时器
  |   └─ restart_apic_timer();  // 重启定时器
  |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
  |   |   ├─ start_hv_timer(); // 能使用hv timer, 则使用hv timer
- |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |   |       ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
- |   |       ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置hv timer, 失败则直接返回false
- |   |       ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
- |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |   |   ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
+ |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |   |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
+ |   |   |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置hv timer, 失败则直接返回false
+ |   |   |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
+ |   |   |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
+ |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |   └─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |   |       ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
- |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |   |       ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |       ├─ start_sw_period(); // 周期性或一次性模式, 调用
+ |   |       └─ start_sw_tscdeadline(vcpu); // 不能使用hv timer, 则直接返回false
 
 
 
@@ -353,6 +355,16 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
         vmx->hv_deadline_tsc = tscl + delta_tsc;
         *expired = !delta_tsc;
         return 0;
+}
+```
+
+```cpp
+static void cancel_hv_timer(struct kvm_lapic *apic)
+{
+        WARN_ON(preemptible());
+        WARN_ON(!apic->lapic_timer.hv_timer_in_use);
+        kvm_x86_ops.cancel_hv_timer(apic->vcpu);
+        apic->lapic_timer.hv_timer_in_use = false;
 }
 ```
 
