--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -286,6 +286,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                         cancel_hv_timer(apic);
                 } else if (expired) 
                         apic_timer_expired(apic, false);
+                        // 取消hv timer
                         cancel_hv_timer(apic);
                 }
         }
@@ -327,6 +328,7 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
         tscl = rdtsc();
         // 读取guest tsc
         guest_tscl = kvm_read_l1_tsc(vcpu, tscl);
+        // 虚拟机tscdeadline到期的差值, 可能是0
         delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;
         lapic_timer_advance_cycles = nsec_to_cycles(vcpu,
                                                     ktimer->timer_advance_ns);
