--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -360,6 +360,8 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
 }
 ```
 
+其实就是设置vmx->hv_deadline_tsc = tscl + delta_tsc;
+
 ```cpp
 static void cancel_hv_timer(struct kvm_lapic *apic)
 {
