--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -67,7 +67,7 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   ├─ start_hv_timer(); // 能使用hv timer, 则使用hv timer
  |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
  |   |   |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
- |   |   |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置hv timer, 失败则直接返回false
+ |   |   |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
  |   |   |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
  |   |   |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
  |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
@@ -261,7 +261,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         // tscdeadline是0, 直接返回false
         if (!ktimer->tscdeadline)
                 return false;
-        // 对应vmx的vmx_set_hv_timer
+        // 对应vmx的vmx_set_hv_timer, 设置vmx->hv_deadline_tsc
         if (kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired))
                 return false;
         // 设定hv timer正在使用
@@ -284,6 +284,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                 if (atomic_read(&ktimer->pending)) {
                         // 取消hv timer
                         cancel_hv_timer(apic);
+                // 
                 } else if (expired) 
                         apic_timer_expired(apic, false);
                         // 取消hv timer
@@ -311,7 +312,7 @@ bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 
 mwait指令透传给虚拟机, 或者能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer
 
-2. 
+2. 调用vmx的`vmx_set_hv_timer`, 设置`vmx->hv_deadline_tsc`
 
 
 ```cpp
@@ -330,7 +331,7 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
         guest_tscl = kvm_read_l1_tsc(vcpu, tscl);
         // 虚拟机tscdeadline到期的差值, 可能是0
         delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;
-        
+        // timer advanced 
         lapic_timer_advance_cycles = nsec_to_cycles(vcpu,
                                                     ktimer->timer_advance_ns);
 
@@ -354,14 +355,15 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
          */
         if (delta_tsc >> (cpu_preemption_timer_multi + 32))
                 return -ERANGE;
-
+        // 
         vmx->hv_deadline_tsc = tscl + delta_tsc;
+        // 
         *expired = !delta_tsc;
         return 0;
 }
 ```
 
-其实就是设置vmx->hv_deadline_tsc = tscl + delta_tsc;
+其实就是设置`vmx->hv_deadline_tsc = tscl + delta_tsc;`
 
 ```cpp
 static void cancel_hv_timer(struct kvm_lapic *apic)
